[metadata]
name = cgtn-feed
version = 0.0.1
author = Steve Lukis
author_email = stevelukis88@gmail.com
description = A python package which collects informations from CGTN (China Global TV Network)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stevelukis/scraping-cgtn
project_urls =
    Blog = https://medium.com/@stevelukis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests==2.26.0
    beautifulsoup4==4.10.0

[options.packages.find]
where = src